<resources>
    <string name="app_name">Mind to Heart</string>
    <string name="categoryWork">Work</string>
    <string name="categoryAcademics">Academics</string>
    <string name="categoryRelation">Relationship</string>
    <string name="categoryPeer">Peer Group</string>
    <string name="categoryInternet">Internet Addiction</string>
    <string name="categorySelfLove">Self Love</string>
    <string name="q1work">Do you have time to finish your assignments?</string>
    <string name="q1academics">Do you have time to finish your assignments?</string>
    <string name="q2work">How would you describe your relationship with your coworkers?</string>
    <string name="q2academics">How would you describe your relationship with your classmates and teachers?</string>
    <string name="q3work">Does your work mess with your sleep cycles?</string>
    <string name="q3academics">Do your academics mess with your sleep cycles?</string>
    <string name="q4work">Are you satisfied with your work pay?</string>
    <string name="q4academics">Do you feel satisfied with your grades?</string>
    <string name="q5work">How often do you feel overworked?</string>
    <string name="q5academics">How often do you feel overworked?</string>
    <string name="q6committed">How often do you feel under-loved?</string>
    <string name="q6single">Do you look at couples and feel lonely or incomplete?</string>
    <string name="q7committed">Do you feel that your partner gives you enough time?</string>
    <string name="q7single">Do you feel you should me more proactive in finding a partner?</string>
    <string name="q8committed">Does your partner listen to you?</string>
    <string name="q8single">You enjoy the freedom of being alone.</string>
    <string name="q9committed">Do you deal with relationship problems as a team?</string>
    <string name="q9single">You feel a relationship is important.</string>
    <string name="q10committed">You are happy in your relationship.</string>
    <string name="q10single">You feel happy being single.</string>
    <string name="q11">You feel pressured by your parents and relatives to do something you don\'t want to.</string>
    <string name="q12">When you see your friends do something, you feel the urge to do it regardless of right or wrong.</string>
    <string name="q13">You feel satisfied with your friendships.</string>
    <string name="q14">You feel that your friends give you enough time, attention and support.</string>
    <string name="q15">You feel your parents are your constant support system.</string>
    <string name="q16">You spend more time on the internet than you intend to.</string>
    <string name="q17">Do you feel your time online has led you to lose significant relationships or social skills?</string>
    <string name="q18">You feel affected by social media likes and feel the need to keep up with your friends.</string>
    <string name="q19">You feel you use the internet wisely.</string>
    <string name="q20">You feel addicted to gaming and compelled to spend real money on a game.</string>
    <string name="q21">You feel comfortable with how you look.</string>
    <string name="q22">You feel you are not of much worth as a person.</string>
    <string name="q23">You are affected by what people think of you and how they behave towards you.</string>
    <string name="q24">You feel you have many good qualities.</string>
    <string name="q25">You feel satisfied and relaxed.</string>
    <string name="option_never">Never</string>
    <string name="option_rare">Rarely</string>
    <string name="option_often">Often</string>
    <string name="option_always">Always</string>
    <string name="option_splendid">Splendid</string>
    <string name="option_nice">Nice</string>
    <string name="option_neutral">Neutral</string>
    <string name="option_bad">Bad</string>
    <string name="option_strongly_agree">Strongly agree</string>
    <string name="option_agree">Agree</string>
    <string name="option_disagree">Disagree</string>
    <string name="feedback_self_love_range4">You seem to lack confidence in yourself. You care for others at your own expense, and might limit your feelings. You feel like you are not loved. the only person who can actually change this belief is yourself you start working on it.</string>
    <string name="feedback_self_love_range3">You have faith in yourself but sometimes keep negatively comparing yourself to people around. When good happens you feel like it will be taken away by the bad. You need to have faith and everything will be on your favour.</string>
    <string name="feedback_self_love_range2">You have good self-esteem, you feel good about yourself and see yourself as deserving the respect of others. You feel confident while speaking to others. But you still feel you have a void which can be completed with more focus on your thoughts and behaviour.</string>
    <string name="feedback_self_love_range1">You have an accurate and balanced view of yourself. You are able to form secure and honest relationships and  have a good opinion of your abilities but recognize your flaws and constantly work to improve them.</string>
    <string name="feedback_internet_range1">You feel happier spending real time with your family and friends. You spend very less hours online. You socialise well with people around and don’t worry to show everything about your life online.</string>
    <string name="feedback_internet_range2">You don’t tend to spend much time online. You have a certain timetable according to which you work. But you seem to check your phone from time to time and can’t stay away for long.</string>
    <string name="feedback_internet_range3">You think you are spending time on Internet wisely but when you go offline you experience unpleasant withdrawal symptoms such as anxiety or moodiness. If you have control on your emotions and thoughts, you will be able to regulate yourself.</string>
    <string name="feedback_internet_range4">You have the compulsive need to spend a great deal of time on the Internet, to the point where your relationships, work and health are seem to be suffering. You neglect time with your family and friends. If you plan your day wisely,  you will be able to recover from it.</string>
    <string name="feedback_peer_range1">You don’t get influenced easily by others point of you. You have complete focus on yourself and what you desire. You are aware of you surrounding and where you stand. You are happy with who you are and attract the same people around you.</string>
    <string name="feedback_peer_range2">You tend to listen to your own self and not get influenced by what everyone else has to say about something you want to pursue. But sometimes to keep relationships and not hurt someone you say yes even if you don’t want to do that.  If you make them understand your view they will start to understand you.</string>
    <string name="feedback_peer_range3">You mostly tend to avoid situations where people tend to force you towards something but in some phases you start making social comparisons and have low moods and sometimes have unhappiness with your appearance.</string>
    <string name="feedback_peer_range4">If you\'re with friends who are doing something that you typically would not do but you have this habit you of agreeing to whatever they say. You have Problems with self-esteem and self-confidence. \nIf you speak for what you stand, you will be able to get out the peer pressure</string>
    <string name="feedback_committed_range1">You both understand each other’s contribution in the relationship. You give each other the right amount of space and make each other feel loved and supported. You also have own share of flaws but you don’t let it affect on your relationship.</string>
    <string name="feedback_committed_range2">You both compliment each other well and stay sensitive to the each other\'s feelings.  your relationship could significantly be better if you communicate your emotions well.\nYou support each other in the darkest times and take out appropriate time for each other.</string>
    <string name="feedback_committed_range3">You feel like you are not getting the expected response from your partner. Every relationship requires efforts to make it work. If you don’t give it the time , it will certainly degrade. You both should be each other’s strength and help each other grow. You need to listen to each other and solve the conflict.</string>
    <string name="feedback_committed_range4">You and your partner have difficulty communicating with each other. You need to be honest with how you are feeling. You need to start dealing the problem as a whole and respect each other’s opinions. Also, stop taking each other for granted and start valuing every moment together.</string>
    <string name="feedback_work_range1">You feel satisfied with where you are working and have good compatibility with your co workers. You submit work on time and have a proper schedule for your tasks so you don’t have to face much stress. You are prepared for what is yet to come and have a good work- life balance.</string>
    <string name="feedback_work_range2">You feel like you still can have much better opportunities. You finish all the work but you have anxiety because somewhere you take too much on your plate and you need to decide your priorities and communicate well with your colleagues and superiors which could decrease load and increase efficiency.</string>
    <string name="feedback_work_range3">You finish your assignments the night before submission and then rant about them. You are aware of your problems and also feel like changing them but it’s becoming a bit difficult to change your habits and behaviour. Stop complaining and start figuring out solutions and this will lead to a healthy environment at work.</string>
    <string name="feedback_work_range4">You seem to be having anxiety whenever deadlines approach because you are unprepared and you tend to lag behind people in your workspace in terms of efficiency because of which stress occurs. You sleep late because of which you seem frustrated at times.\nEffectively managing work schedule can significantly reduce anxiety and allow you to balance friends, family and work.</string>
    <string name="feedback_academics_range1">You feel satisfied with where you are studying and have good compatibility with your classmates. You submit work on time and have a proper schedule for your tasks so you don’t have to face much stress. You are prepared for what is yet to come and have a good work-life balance.</string>
    <string name="app_intro">Welcome to Mind to Heart, a platform where you can check the status of your mental well being by undergoing this simple questionnaire.\nWe have designed this questionnaire to help you get an insight into various facets of your life that relate to your well being and get you to introspect and truly help you understand what you may have been doing wrong. You will get a feedback based on the answers that you choose, so choose wisely.\nHope you have a pleasant experience.</string>
    <string name="take_test">Take Test</string>
    <string name="intro">Before we begin, we would like to know the following information about you in order to provide you with a better user experience.</string>
    <string name="work_question">Are you a working professional or a student?</string>
    <string name="relation_question">Are you in a romantic relationship or are you single?</string>
    <string name="working">Working</string>
    <string name="student">Student</string>
    <string name="committed">In a relationship</string>
    <string name="single">Single</string>
    <string name="start_quiz">START QUIZ</string>
</resources>