<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.mindtoheart.model.QuestionViewModel" />
        <variable
            name="startFragment"
            type="com.example.mindtoheart.StartFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceHeadline3"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:scaleType="center"
                app:srcCompat='@drawable/mentalhealth'
                android:importantForAccessibility="no"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_intro"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceBody1"/>

            <Button
                android:id="@+id/take_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/take_test"
                android:onClick="@{() -> startFragment.goToNextScreen()}"/>

        </LinearLayout>
    </ScrollView>
</layout>

